# gcmake-test-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_data.json  cmake_data.yaml  main.cpp  pre-build.cpp  some_json.json  test-json-main.cpp  test-sfml-main.cpp
basic-tests/: LICENSE.md  README.md  cmake_data.yaml  main.cpp
basic-tests/docs/: Doxyfile.in  conf.py.in  homepage.hpp  index.rst
basic-tests/include/CGEN_TEST/: SomeClass.hpp
basic-tests/subprojects/build-info-lib/: cmake_data.yaml
basic-tests/subprojects/complex-lib/: cmake_data.yaml  complex-lib.hpp
basic-tests/subprojects/dll-lib/: cmake_data.yaml  dll-lib.hpp
basic-tests/subprojects/fmt-test/: cmake_data.yaml  main.cpp
basic-tests/subprojects/glfw-test/: cmake_data.yaml
basic-tests/subprojects/glm-test/: cmake_data.yaml  main.cpp
basic-tests/subprojects/header-only/: cmake_data.yaml
basic-tests/subprojects/imgui-test/: cmake_data.yaml  main.cpp
basic-tests/subprojects/magic_enum_test/: cmake_data.yaml  main.cpp
basic-tests/subprojects/private-headers-example/: cmake_data.yaml  private-headers-example.hpp
basic-tests/subprojects/sdl-test/: cmake_data.yaml  main.c
basic-tests/subprojects/stb-test/: cmake_data.yaml  main.c
basic-tests/subprojects/sub-exe/: .gitignore  cmake_data.yaml  main.cpp  pre-build.c
basic-tests/subprojects/test-argparse/: cmake_data.yaml  main.cpp
basic-tests/subprojects/threads-test/: cmake_data.yaml
basic-tests/subprojects/toggle-lib/: cmake_data.yaml  toggle-lib.hpp
basic-tests/subprojects/using-cli11/: cmake_data.yaml  main.cpp
basic-tests/subprojects/using-cxxopts/: cmake_data.yaml  main.cpp
basic-tests/subprojects/using-ftxui/: cmake_data.yaml  main.cpp
basic-tests/subprojects/using-pugixml/: cmake_data.yaml  main.cpp
basic-tests/subprojects/using-re2/: cmake_data.yaml  main.cpp
basic-tests/subprojects/using-spdlog/: cmake_data.yaml  main.cpp
basic-tests/subprojects/using-zlib/: cmake_data.yaml  main.c
basic-tests/subprojects/wxwidgets-test/: cmake_data.yaml
basic-tests/subprojects/yaml-cpp-test/: cmake_data.yaml  main.cpp
basic-tests/tests/basic-test/: cmake_data.yaml  main.cpp
cmake/: exe-prebuild-util.cmake  toggle-lib-util.cmake
code-file-generation/: .gitignore  cmake_data.yaml  main.cpp2  pre_build.cpp2
code-file-generation/include/CODE_FILE_GENERATION/: noice.hpp
cpp-modules/: cmake_data.yaml  main.cpp
cpp-modules/include/CPP_MODULES/: Helpers.cppm
cpp-modules/src/CPP_MODULES/: Helpers.cpp
cppfront-basic/: README.md  cmake_data.yaml  main.cpp2  pre_build.cpp2
cppfront-basic/include/CPPFRONT_BASIC/: impl.hpp
cppfront-basic/src/CPPFRONT_BASIC/: impl.cpp2
cppfront-basic/subprojects/cpp2-lib/: cmake_data.yaml  cpp2-lib.hpp  pre_build.cpp2
cuda-example/: README.md  cmake_data.yaml  main.cpp
cuda-example/include/CUDA_EXAMPLE/: Helper.hpp
cuda-example/src/CUDA_EXAMPLE/: Helper.cpp  Helper.cu
emscripten-basic/: .gitignore  cmake_data.yaml  main.cpp  pre_build.cpp
emscripten-basic/subprojects/some-lib/: cmake_data.yaml  some-lib.hpp
emscripten-custom-html/: README.md  cmake_data.yaml  custom-shell.html  main.cpp
emscripten-glfw-imgui/: cmake_data.yaml  main.cpp
emscripten-sdl-imgui/: cmake_data.yaml  main.cpp
features-basic/: cmake_data.yaml  main.cpp
features-gcmake-dep/: README.md  cmake_data.yaml  main.cpp
include/CGEN_TEST/nested/: BuildInfo.hpp  NestedFile.hpp
reference-parent/: cmake_data.yaml  reference-parent.hpp
reference-parent/cross_compilation_toolchains/: zig_to_RPI-64bit.toolchain.cmake
reference-parent/include/REFERENCE_PARENT/: SomeItem.hpp
reference-parent/src/REFERENCE_PARENT/: SomeItem.cpp
reference-parent/subprojects/example/: cmake_data.yaml  main.cpp
separate-exe-and-lib/: cmake_data.yaml  main.cpp
separate-exe-and-lib/subprojects/the-lib/: cmake_data.yaml  the-lib.hpp
src/CGEN_TEST/: SomeClass.cpp
src/CGEN_TEST/nested/: BuildInfo.cpp  NestedFile.cpp
subprojects/build-info-lib/: build_info.hpp  cmake_data.yaml
subprojects/complex-lib/: cmake_data.yaml  complex-lib.h
subprojects/dll-lib/: cmake_data.yaml  dll-lib.hpp
subprojects/dll-lib/cmake/: exe-prebuild-util.cmake  python-prebuild-util.cmake
subprojects/fmt-test/: cmake_data.yaml  main.cpp
subprojects/glfw-test/: cmake_data.yaml  main.cpp
subprojects/glm-test/: cmake_data.yaml  main.cpp
subprojects/header-only/: cmake_data.yaml  header-only.hpp
subprojects/library-test/: cmake_data.yaml  main.hpp
subprojects/sdl-test/: cmake_data.yaml  main.c
subprojects/stb-test/: cmake_data.yaml  main.c
subprojects/sub-exe/: main.cpp  pre-build.c  some-text.txt
subprojects/subproject-test/: cmake_data.yaml  main.cpp
subprojects/threads-test/: cmake_data.yaml  main.cpp
subprojects/toggle-lib/: .gitignore  cmake_data.yaml  pre-build.py  random_json.json  toggle-lib.hpp
subprojects/toggle-lib/cmake/: toggle-lib-util.cmake
subprojects/wxwidgets-test/: cmake_data.yaml  main.cpp
subprojects/yaml-cpp-test/: cmake_data.yaml
subprojects/yaml-cpp-test/resources/: my_cool_yaml_file.yaml
testing_pgo/: .gitignore  cmake_data.yaml  main.cpp
testing_pgo/subprojects/inner-lib/: cmake_data.yaml  inner-lib.hpp
testing_pgo/subprojects/inner-static/: cmake_data.yaml  inner-static.hpp
using-brotli/: cmake_data.yaml  compress.c  decompress.c
using-brotli/include/USING_BROTLI/: Results.h  common.h
using-brotli/src/USING_BROTLI/: Results.c  common.c
using-brotli/subprojects/file-manip/: cmake_data.yaml  file-manip.h
using-catch2/: cmake_data.yaml  using-catch2.hpp
using-crow/: README.md  cmake_data.yaml  main.cpp
using-curl/: README.md  basic-server.py  cmake_data.yaml  main.cpp
using-doctest/: cmake_data.yaml  using-doctest.hpp
using-googletest/: cmake_data.yaml  using-googletest.hpp
using-kokkos/: cmake_data.yaml  main.cpp
using-openmp/: cmake_data.yaml  main.c
using-raylib/: cmake_data.yaml  main.c
using-sfml/: cmake_data.yaml  main.cpp
using-sqlite/: README.md  cmake_data.yaml  main.c
using-zstd/: cmake_data.yaml  compress.c  decompress.c
(+85 files in other folders)
